src/styles/netcommunity/part-overrides/_default.overrides.scss
$input-max-width: 350px;

td.wsNowrap {
  padding: 0 !important;
}

/********   Default Styles ********/

.BBFormCheckListContainer {
  /* System Defaults */
  height: 100px;
  overflow: auto;
}

.BBCalendarWeekendDay {
  /* System Defaults */
  border-right: black 1px solid;
  border-top: black 1px solid;
  border-left: black 1px solid;
  border-bottom: black 1px solid;
}

.BBCalendarDay {
  /* System Defaults */
  border-right: black 1px solid;
  border-top: black 1px solid;
  border-left: black 1px solid;
  border-bottom: black 1px solid;
}

.ReportInformationCell {
  /* System Defaults */
  height: 150px;
  white-space: normal;
  overflow: auto;
}

.BBGridHeader {
}

.BBGridFooter {
}

.BBModalDialog {
  /* System Defaults */
  border: solid thin #999999;
}

.BBModalDialogTitle {
  /* System Defaults */
  background-color: #000066;
  border-bottom: solid thin #999999;
  color: #ffffff;
  font-weight: bold;
  overflow: hidden;
  padding: 3px 3px 3px 3px;
  text-align: left;
  white-space: nowrap;
}

.BBModalDialogContent {
  /* System Defaults */
  background-color: #ffffff;
  padding: 3px 3px 3px 3px;
}

.BBModalDialogButton {
  /* System Defaults */
  width: 100px;
}

.BBFieldSet {
}

.BBSequenceMap {
  /* System Defaults */
  margin: 0px;
  padding: 0px;
}

.BBSequenceMapStepList {
  /* System Defaults */
  margin: 0;
  padding: 0;
  display: block;
  overflow: auto;
}

.BBSequenceMapStep {
  /* System Defaults */
  list-style: none;
  float: left;
  margin-right: 6px;
  margin-bottom: 5px;
}

.BBSequenceMapCurrentStep {
  /* System Defaults */
  font-weight: bold;
}

.BBSequenceMapStepItem {
  /* System Defaults */
  display: block;
  border: 1px solid #999999;
  background-color: #dddddd;
  padding: 10px 5px;
  text-decoration: none;
  color: #000000;
  min-width: 60px;
  text-align: center;
  font-size: 10px;
  min-height: 13px;
  white-space: nowrap;
}

.BBSequenceMapStepLink {
  /* System Defaults */
  color: #000000;
  font-size: 10px;
}

.BBSequenceMapStepLink:link {
  /* System Defaults */
  color: #000000;
  font-size: 10px;
}

.BBSequenceMapStepLink:visited {
  /* System Defaults */
  color: #000000;
  font-size: 10px;
}

.BBSequenceMapStepLink:hover {
  /* System Defaults */
  color: #000000;
  text-decoration: underline;
  background-color: #eeeeee;
  font-size: 10px;
}

.BBSequenceMapStepLink:active {
  /* System Defaults */
  color: #000000;
  font-size: 10px;
}

.BBSequenceMapCurrentStepItem {
  /* System Defaults */
  background-color: #aaaaaa;
  border-color: #555555;
}

.BBSequenceMapContentContainer {
  /* System Defaults */
  clear: left;
  margin-top: 20px;
}

.BBSequenceMapContentHeader {
}

.BBSequenceMapCommandContainer {
}

.BBSequenceMapNavigationContainer {
  /* System Defaults */
  float: right;
  margin-top: 15px;
  margin-right: 25px;
}

.BBSequenceMapNavigationButton {
}

.DCFieldCaption {
  /* System Defaults */
  width: 150px;
  display: block;
  float: left;
  margin-right: 2px;
  padding-right: 5px;
  text-align: right;
}

.DCCreditValidation {
  /* System Defaults */
  margin-bottom: 0px;
}

.DCCreditExpiration {
  /* System Defaults */
  margin-bottom: 0px;
}

.DonationCaptureFormTableFieldset {
  /* System Defaults */
  border: none;
}

.DonationCaptureFormTableFieldLegend {
  /* System Defaults */
  font-weight: bold;
  font-size: 13px;
  color: #000000;
  padding: 0px;
}

.DonationCaptureFormTableFieldDiv {
}

.DonationCaptureFormTableFDFieldLegend {
  /* System Defaults */
  font-weight: normal;
  font-size: 11px;
}

.BBSequenceMapOptionalContainer {
  /* System Defaults */
  float: left;
  margin-top: 15px;
  margin-right: 25px;
}

.BBClear {
  /* System Defaults */
  clear: both;
  display: block;
  position: relative;
}

.BBSequenceMapPreviousStep {
}

.BBSequenceMapFutureStep {
}

.BBSequenceMapFutureStepItem {
}

.BBSequenceMapFirstStep {
}

.BBSequenceMapLastStep {
}

.AlphaIndex {
}

.AlphaIndexDescription {
}

.AlphaIndexItem {
  /* System Defaults */
  padding: 2px;
  margin: 2px;
  font-size: 1.2em;
  font-family: Arial, Verdana;
  text-decoration: underline;
}

.AlphaIndexSelectedItem {
  /* System Defaults */
  text-decoration: none;
  font-weight: bold;
}

.AlphaIndexDisabledItem {
  /* System Defaults */
  text-decoration: none;
}

.BML_Header {
  /* System Defaults */
  font-size: 18px;
  font-weight: bold;
}

.BML_Desc {
  /* System Defaults */
  display: block;
  margin: 8px 0px 8px 0px;
}

.BML_Content textarea {
  /* System Defaults */
  width: 300px;
}

.BBCalendar {
  /* System Defaults */
  border-color: black;
}

.BBCalendar:active {
  /* System Defaults */
  color: #00008b;
}

.BBCalendar:hover {
  /* System Defaults */
  color: #00008b;
}

.BBCalendar:link {
  /* System Defaults */
  color: #00008b;
}

.BBCalendar:visited {
  /* System Defaults */
  color: #00008b;
}

.BBCalendarDayHeader {
  /* System Defaults */
  background-color: #336699;
  color: White;
  height: 1px;
}

.BBCalendarNextPrev {
  /* System Defaults */
  background-color: #336699;
  color: white;
}

.BBCalendarOtherMonthDay {
  /* System Defaults */
  color: #cc9966;
}

.BBCalendarSelectedDay {
  /* System Defaults */
  font-weight: bold;
}

.BBCalendarSelector {
  /* System Defaults */
  background-color: #336699;
}

.BBCalendarTitle {
  /* System Defaults */
  background-color: #336699;
  color: white;
  font-weight: bold;
}

.BBCalendarTodayDay {
  /* System Defaults */
  background-color: #b0c4de;
}

.BBFieldCaption {
  text-align: left;
  white-space: initial;
}

/** FORM CONTROL STYLES **/
.BBFieldControlCell {
  & > span {
    @include make-custom-radio;
  }

  & > select {
    @include winterthur-make-custom-select;
  }

  .BBFieldCheckboxCaption {
    @include make-custom-checkbox;
  }

  & > input {
    @extend .form-control;
  }
}

.BBFormButtonCell {
  /* System Defaults */
  text-align: center;
}

.BBFormButtonRow {
  @include winterthur-make-footer-section;
}

.BBFormCheckbox {
}
/* ... */

